--- a/index.html
+++ b/index.html
@@ -1,3 +1,37 @@
-<h1>Bilişim Teknolojileri Atölyesi Uygulamaları </h1>
-<p>
+<!doctype html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>CSHARP VERİTABANI UYGULAMALARI</title>
+</head>
 
+<body>
+	<h1> CSHARP VERİTABANI UYGULAMALARI</h1>
+	<div>
+	<table width="600" border="0" cellspacing="0" cellpadding="0">
+  <tbody>
+    <tr>
+      <td><img src="images/StokTakip_ekran1.png" width="300"  alt=""/></td>
+      <td><a href="https://github.com/esataltun/Csharp_Veritabani_Uygulamalari/blob/main/StokTakip_AccessVT.rar">Stok Takip Programı</a></td>
+    </tr>
+    <tr>
+      <td>--</td>
+      <td>--</td>
+    </tr>
+    <tr>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+      <td>--</td>
+      <td>--</td>
+    </tr>
+  </tbody>
+</table>
+
+	
+	</div>
+	
+	
+</body>
+</html>
