--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	<table width="600" border="0" cellspacing="0" cellpadding="0">
   <tbody>
     <tr>
-      <td><img src="images/StokTakip_ekran1.png" width="300"  alt=""/></td>
-      <td><a href="https://github.com/esataltun/Csharp_Veritabani_Uygulamalari/blob/main/StokTakip_AccessVT.rar">Stok Takip Programı</a></td>
+      <td><img src="images/StokTakip_ekran1.png" width="400"  alt=""/></td>
+      <td style="text-align=left"> <a href="https://github.com/esataltun/Csharp_Veritabani_Uygulamalari/blob/main/StokTakip_AccessVT.rar">Stok Takip Programı</a></td>
     </tr>
     <tr>
       <td>--</td>
