--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <tbody>
     <tr>
       <td><img src="images/StokTakip_ekran1.png" width="400"  alt=""/></td>
-      <td style="text-align=left"> <a href="https://github.com/esataltun/Csharp_Veritabani_Uygulamalari/blob/main/StokTakip_AccessVT.rar">Stok Takip Programı</a></td>
+      <td style="text-align=left"> <a href="https://github.com/esataltun/Csharp_Veritabani_Uygulamalari/blob/main/StokTakip_AccessVT.rar">Stok Takip Programı(Access VT)</a></td>
     </tr>
  <tr>
       <td><img src="images/Csharp_SiparisTakip_AccessVT_Login_Datagridview.png" width="400"  alt=""/></td>
-      <td style="text-align=left"> <a href="https://github.com/esataltun/Csharp_Veritabani_Uygulamalari/blob/main/Csharp_SiparisTakip_AccessVT_Login_Datagridview.rar">Sipariş Takip Programı (Login)</a></td>
+      <td style="text-align=left"> <a href="https://github.com/esataltun/Csharp_Veritabani_Uygulamalari/blob/main/Csharp_SiparisTakip_AccessVT_Login_Datagridview.rar">Sipariş Takip Programı (Login)-Access VT</a></td>
     </tr>  
     <tr>
       <td>--</td>
